Replace RolloutInfo with API def. More UI progress, add restart endpoint
